feat:完善面试部分

--- a/miniprogram/pages/center/index/index.wxss
+++ b/miniprogram/pages/center/index/index.wxss
@@ -2,6 +2,7 @@
 page{
   background-color: white;
 }
+
 .center1{
   position: absolute;
   left: 26rpx;
@@ -14,14 +15,244 @@ page{
   box-shadow: 0rpx 2rpx 8rpx 0rpx rgba(250, 191, 1, 0.47);
   border: 1rpx solid rgba(255, 255, 255, 0);
 }
-.touxiang{
+
+.headphone{
   position: absolute;
-  left: 27px;
-  top: 129px;
-  width: 94px;
-  height: 92px;
-  line-height: 20px;
-  background-color: rgba(127, 159, 206, 1);
+  left: 88rpx;
+  top: 206rpx;
+  width: 120rpx;
+  height: 120rpx;
+  background-color: rgba(250, 191, 1, 1);
+  border-radius: 50%;
+}
+.yuan{
+  position: absolute;
+  left: 54rpx;
+  top: 174rpx;
+  width: 188rpx;
+  height: 184rpx;
+  line-height: 40rpx;
   text-align: center;
-  border: 1px solid rgba(187, 187, 187, 1);
+  border: 2rpx solid rgba(187, 187, 187, 1);
+  border-radius: 50%;
+}
+.txt1{
+  position: absolute;
+  left: 258rpx;
+  top: 246rpx;
+  width: 86px;
+  height: 40rpx;
+  color: rgba(163, 163, 163, 1);
+  font-size: 28rpx;
+  text-align: left;
+  font-family: PingFangSC-regular;
+}
+.txt2{
+  position: absolute;
+  left: 526rpx;
+  top: 236rpx;
+  width: 160rpx;
+  height: 60rpx;
+  line-height: 60rpx;
+  border-radius: 12rpx;
+  background-color: rgba(250, 191, 1, 1);
+  color: rgba(16, 16, 16, 1);
+  font-size: 28rpx;
+  text-align: center;
+  font-family: Microsoft Yahei;
+  border: 4rpx solid rgba(0, 0, 0, 1);
+}
+
+.center2{
+  position: absolute;
+  left: 26rpx;
+  top: 440rpx;
+  width: 698rpx;
+  height: 300rpx;
+  line-height: 40rpx;
+  border-radius: 16rpx;
+  text-align: center;
+  box-shadow: 0px 2rpx 8rpx 0px rgba(250, 191, 1, 0.47);
+  border: 2rpx solid rgba(255, 255, 255, 0);
+}
+.book1{
+  position: absolute;
+  left: 54rpx;
+  top: 464rpx;
+  width: 72rpx;
+  height: 72rpx;
+}
+.txt3{
+  position: absolute;
+  left: 166rpx;
+  top: 464rpx;
+  width: 146rpx;
+  height: 50rpx;
+  color: rgba(16, 16, 16, 1);
+  font-size: 36rpx;
+  text-align: left;
+  font-family: PingFangSC-regular;
+}
+.txt4{
+  position: absolute;
+  left: 166rpx;
+  top: 522rpx;
+  width: 366rpx;
+  height: 40rpx;
+  color: rgba(163, 163, 163, 1);
+  font-size: 28rpx;
+  text-align: left;
+  font-family: SourceHanSansSC-regular;
+}
+.book2{
+  position: absolute;
+  left: 50rpx;
+  top: 610rpx;
+  width: 80rpx;
+  height: 80rpx;
+}
+.txt5{
+  position: absolute;
+  left: 164rpx;
+  top: 614rpx;
+  width: 146rpx;
+  height: 50rpx;
+  color: rgba(16, 16, 16, 1);
+  font-size: 36rpx;
+  text-align: left;
+  font-family: PingFangSC-regular;
+}
+.txt6{
+  position: absolute;
+  left: 166rpx;
+  top: 670rpx;
+  width: 338rpx;
+  height: 40rpx;
+  color: rgba(163, 163, 163, 1);
+  font-size: 28rpx;
+  text-align: left;
+  font-family: SourceHanSansSC-regular;
+}
+.line1{
+  position: absolute;
+  left: 24rpx;
+  top: 586rpx;
+  width: 698rpx;
+  height: NaNpx;
+  border: 2rpx solid rgba(250, 191, 1, 0.47);
+}
+
+.center3{
+  position: absolute;
+  left: 24rpx;
+  top: 814rpx;
+  width: 698rpx;
+  height: 300rpx;
+  line-height: 40rpx;
+  border-radius: 16rpx;
+  text-align: center;
+  box-shadow: 0px 2rpx 8rpx 0px rgba(250, 191, 1, 0.47);
+  border: 2rpx solid rgba(255, 255, 255, 0);
+}
+.bling{
+  position: absolute;
+  left: 50rpx;
+  top: 834rpx;
+  width: 76rpx;
+  height: 76rpx;
+}
+.txt7{
+  position:  absolute;
+  left: 166rpx;
+  top: 836rpx;
+  width: 146rpx;
+  height: 50rpx;
+  color: rgba(16, 16, 16, 1);
+  font-size: 36rpx;
+  text-align: left;
+  font-family: PingFangSC-regular;
+}
+.txt8{
+  position: absolute;
+  left: 166rpx;
+  top: 894rpx;
+  width: 338rpx;
+  height: 40rpx;
+  color: rgba(163, 163, 163, 1);
+  font-size: 28rpx;
+  text-align: left;
+  font-family: SourceHanSansSC-regular;
+}
+.message{
+  position: absolute;
+  left: 58rpx;
+  top: 998rpx;
+  width: 60rpx;
+  height: 60rpx;
+}
+.txt9{
+  position: absolute;
+  left: 166rpx;
+  top: 996rpx;
+  width: 146rpx;
+  height: 50rpx;
+  color: rgba(16, 16, 16, 1);
+  font-size: 36rpx;
+  text-align: left;
+  font-family: PingFangSC-regular;
+}
+.txt10{
+  position: absolute;
+  left: 166rpx;
+  top: 1054rpx;
+  width: 310rpx;
+  height: 40rpx;
+  color: rgba(163, 163, 163, 1);
+  font-size: 28rpx;
+  text-align: left;
+  font-family: SourceHanSansSC-regular;
+}
+.txt11{
+  position: absolute;
+  left: 136rpx;
+  top: 1180rpx;
+  width: 112rpx;
+  height: 40rpx;
+  color: rgba(16, 16, 16, 1);
+  font-size: 28rpx;
+  text-align: left;
+  font-family: PingFangSC-regular;
+}
+.txt12{
+  position: absolute;
+  left: 248rpx;
+  top: 1180rpx;
+  width: 168rpx;
+  height: 40rpx;
+  color: rgba(239, 184, 6, 1);
+  font-size: 28rpx;
+  text-align: left;
+  font-family: PingFangSC-regular;
+}
+.txt13{
+  position: absolute;
+  left: 410rpx;
+  top: 1180rpx;
+  width: 28rpx;
+  height: 40rpx;
+  color: rgba(16, 16, 16, 1);
+  font-size: 28rpx;
+  text-align: left;
+  font-family: PingFangSC-regular;
+}
+.txt14{
+  position: absolute;
+  left: 436rpx;
+  top: 1180rpx;
+  width: 168rpx;
+  height: 40rpx;
+  color: rgba(239, 184, 6, 1);
+  font-size: 28rpx;
+  text-align: left;
+  font-family: PingFangSC-regular;
 }
