--- a/miniprogram/pages/home/examInterview/examInterview.wxml
+++ b/miniprogram/pages/home/examInterview/examInterview.wxml
@@ -16,10 +16,10 @@
 <image src="../../../images/icon/graysou.png" class="img3"></image>
 <view class="txt5">让面试官再讲一遍</view>
 <!-- <view class="txt6" hidden="{{src}}" bindtap='wordYun'>下一题</view> -->
-<view class="txt6" hidden="{{src}}" bindtap="handleStart">开始</view>
-<view class="txt6" hidden="{{(!src)&&(!disabled)}}" bindtap="handleNext">下一题</view>
-<view class="txt6" hidden="{{!(src&&disabled)}}" bindtap="handleEnd">结束</view>
-<button bindtap="play" data-type="mine">播放录音</button>
+<button class="txt6" disabled="{{btnDisabled}}" hidden="{{src}}" bindtap="handleStart">开始</button>
+<button class="txt6" disabled="{{btnDisabled}}" hidden="{{(!src)&&(!disabled)}}" bindtap="handleNext">下一题</button>
+<button class="txt6" disabled="{{btnDisabled}}" hidden="{{!(src&&disabled)}}" bindtap="handleEnd">结束</button>
+<!-- <button bindtap="play" data-type="mine">播放录音</button> -->
 
 <view class="txt7" hidden="{{!src}}">正在录制中......</view>
 </block>
