--- a/miniprogram/pages/home/interviewAll/interviewAll.wxss
+++ b/miniprogram/pages/home/interviewAll/interviewAll.wxss
@@ -1,7 +1,4 @@
-.body{
-  position: absolute;
-  width: 750rpx;
-  height: 1624rpx;
+/* page {
   background-color: rgba(255, 255, 255, 1);
 }
 .txt1{
@@ -179,4 +176,210 @@
   text-align: center;
   font-family: Microsoft Yahei;
   border: 4rpx solid rgba(0, 0, 0, 1);
+} */
+/* miniprogram/pages/home/wrongAll/wrongAll.wxss */
+
+page {
+  background-color: rgba(255, 255, 255, 1);
+}
+.menu {
+  position: relative;
+  width: 64rpx;
+  height: 64rpx;
+  font-size: 62rpx;
+  left: 668rpx;
+  top: -63rpx;
+}
+.bank-wrap {
+  background: white;
+  padding-bottom: 150rpx;
+
+}
+.bank-title {
+  margin-left: 34rpx;
+  padding-top: 42rpx;
+  width: 676rpx;
+  color: rgba(16, 16, 16, 1);
+  font-size: 56rpx;
+  text-align: left;
+  font-family: PingFangSC-regular;
+}
+.score-time {
+  margin-left: 34rpx;
+  height: 40rpx;
+  color: rgba(16, 16, 16, 1);
+  font-size: 28rpx;
+  text-align: left;
+  font-family: PingFangSC-regular;
+  margin-top: 28rpx;
+
+}
+.line {
+  width: 750rpx;
+  border: 1rpx solid rgba(187, 187, 187, 1);
+}
+.bank {
+  margin-left: 34rpx;
+  padding-top: 45rpx;
+  height: 520rpx;
+  overflow: auto;
+}
+
+.correct-analyse {
+  margin-top: 30rpx;
+  color: rgba(16, 16, 16, 1);
+  font-size: 36rpx;
+  text-align: left;
+  font-family: PingFangSC-regular;
+}
+.comments {
+  padding: 30rpx;
+}
+.comment {
+  position: relative;
+}
+.comment .user {
+  display: flex;
+  justify-content: space-between;
+}
+.like-dot, .user-info {
+  display: flex;
+}
+.user-info .user-name {
+  margin-left: 10rpx;
+}
+.like-dot {
+  margin-right: 20rpx;
+}
+
+.comment .mine {
+  width: 40rpx;
+  height: 40rpx;
+}
+.comment .like {
+  width: 40rpx;
+  height: 40rpx;
+}
+.comment .content {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  padding: 20rpx;
+  text-overflow: ellipsis;
+  height: 100rpx;
+  overflow: hidden;
+  color: rgba(16, 16, 16, 1);
+  font-size: 32rpx;
+  text-align: left;
+  font-family: PingFangSC-regular;
+}
+.view-all {
+  height: 60rpx;
+  color: rgba(163, 163, 163, 1);
+  font-size: 28rpx;
+  text-align: center;
+  font-family: PingFangSC-regular;
+  text-decoration: underline;
+  margin-top: 10rpx;
+}
+.publish {
+  position: relative;
+}
+.publish input {
+  position: absolute;
+  left: 19rpx;
+  padding-right: 177rpx;
+  padding-left: 1em;
+  width: 658rpx;
+  height: 76rpx;
+  color: rgba(136, 136, 136, 1);
+  font-size: 28rpx;
+  text-align: left;
+  font-family: PingFang SC;
+  border: 2rpx solid rgba(187, 187, 187, 1);
+}
+.publish .publish-comment {
+  position: absolute;
+  left: 517rpx;
+  top: 6rpx;
+  width: 150rpx;
+  height: 62rpx;
+  border-radius: 10rpx;
+  background-color: rgba(255, 255, 255, 1);
+  color: rgba(163, 163, 163, 1);
+  font-size: 36rpx;
+  text-align: center;
+  font-family: PingFang SC;
+  border: 4rpx solid rgba(163, 163, 163, 1);
+}
+.next-size {
+  position: relative;
+  background: white;
+  height: 200rpx;
+}
+.chekckout-question {
+  width: 164rpx;
+  height: 72rpx;
+  border-radius: 20rpx;
+  background-color: rgba(250, 191, 1, 1);
+  color: rgba(16, 16, 16, 1);
+  font-size: 36rpx;
+  text-align: center;
+  font-family: PingFang SC;
+  border: 4rpx solid rgba(0, 0, 0, 1);
+  line-height: 72rpx;
+}
+.next-question {
+  float: right;
+  margin-right: 40rpx;
+}
+.pre-question {
+  float: left;
+  margin-left: 40rpx;
+}
+.page-size {
+  margin: 0 auto;
+  width: 60rpx;
+  height: 40rpx;
+  color: rgba(16, 16, 16, 1);
+  font-size: 28rpx;
+  text-align: left;
+  font-family: PingFangSC-regular;
+  padding-top: 100rpx;
+}
+
+.cu-btn {
+  position: relative;
+  left: -24%;
+}
+.question-index-wrap {
+  display: flex;
+  padding: 80rpx;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  background: white;
+}
+.cu-dialog {
+  border-radius: 11px;
+  box-shadow: 0px 1px 4px 0px rgba(250, 191, 1, 0.47);
+  border: 2px solid rgba(250, 191, 1, 1);
+}
+.question-index-wrap .question-index {
+  width: 72rpx;
+  height: 72rpx;
+  line-height: 72rpx;
+  background-color: rgba(255, 255, 255, 0);
+  font-size: 36rpx;
+  text-align: center;
+  font-family: -apple-system;
+  border-radius: 50% 50%;
+  margin: 10rpx;
+  border: 2rpx solid black;
+}
+.question-index-wrap .correct {
+  border: 2rpx solid rgba(250, 191, 1, 1);
+  color: rgba(250, 191, 1, 1);
+}
+.no-comments {
+  text-align: center;
 }
