--- a/miniprogram/pages/questionBank/enterWritten/enterWritten.wxml
+++ b/miniprogram/pages/questionBank/enterWritten/enterWritten.wxml
@@ -6,8 +6,6 @@
 <view class="line1"></view>
 <view class="enterWritten">{{examType==='written'?'笔试':'面试'}}题目</view>
 <view class="line2"></view>
-<view class="frist1">{{examType==='written'?'笔试':'面试'}}题库的第一份</view>
+<view class="frist1">{{bank.title}}</view>
 <view class="sentence">“每日一套，早日offer”</view>
-<navigator url="../answerQuestions/answerQuestions" >
-<button plain="#000000" class="startAnswer" >开始答题 </button>
-</navigator>
+<button plain="#000000" class="startAnswer" bindtap="handleStartExam">开始答题 </button>
