--- a/miniprogram/pages/center/index/index.wxml
+++ b/miniprogram/pages/center/index/index.wxml
@@ -1,37 +1,39 @@
 <!--miniprogram/pages/center/index/index.wxml-->
-<cu-custom bgColor="bg-yellow" >
+<cu-custom bgColor="bg-yellow">
 	<view slot="content">个人中心</view>
 </cu-custom>
 <!-- <text>个人中心界面</text> -->
 
 <view class="center1"></view>
-	<image src="../../../images/icon/headphone.png" class="headphone"></image>
-	<view class="yuan"></view>
-	<text class="txt1">未登录</text>
-	<text class="txt2">登录</text>
-
-
+<image src="{{userInfo.avatarUrl?userInfo.avatarUrl:'../../../images/icon/headphone.png'}}" class="headphone"></image>
+<view class="yuan"></view>
+<text class="txt1">{{userInfo.nickName?userInfo.nickName:'未登录'}}</text>
+<button wx:if="{{!userInfo.nickName}}" class="txt2" open-type="getUserInfo" bindgetuserinfo="handleLogin">登录</button>
 <view class="center2"></view>
+<view bindtap="myBanks">
 	<image src="../../../images/icon/book1.png" class="book1"></image>
-	<text class="txt3">我的题库</text>
+	<text class="txt3" >我的题库</text>
 	<text class="txt4">进行中或已完成的练习和试卷</text>
-	<view class="line1"></view>
+</view>
+<view class="line1"></view>
+<view bindtap="interviewCurrent">
 	<image src="../../../images/icon/book2.png" class="book2"></image>
-	<text class="txt5">面试现场</text>
+	<text class="txt5" >面试现场</text>
 	<text class="txt6">模拟面试保存的音频和视频</text>
-
+</view>
 <view class="center3"></view>
+<view bindtap="myMsg">
 	<image src="../../../images/icon/bling.png" class="bling"></image>
 	<text class="txt7">我的消息</text>
 	<text class="txt8">收到的回复、赞、系统通知</text>
-	<view class="line2"></view>
+</view>
+<view class="line2"></view>
+<view bindtap="feedback">
 	<image src="../../../images/icon/message.png" class="message"></image>
-	<text class="txt9">意见反馈</text>
+	<text class="txt9" >意见反馈</text>
 	<text class="txt10">期待收到您的意见和建议</text>
-
-	<text class="txt11">点击查看</text>
-	<text class="txt12">《用户协议》</text>
-	<text class="txt13">和</text>
-	<text class="txt14">《隐私政策》</text>
-
-
+</view>
+<text class="txt11">点击查看</text>
+<text class="txt12" bindtap="userAgreement">《用户协议》</text>
+<text class="txt13">和</text>
+<text class="txt14" bindtap="privacyPolicy">《隐私政策》</text>
