--- a/miniprogram/pages/questionBank/answerQuestions/answerQuestions.wxml
+++ b/miniprogram/pages/questionBank/answerQuestions/answerQuestions.wxml
@@ -1,6 +1,189 @@
 <!--miniprogram/pages/questionBank/answerQuestions/answerQuestions.wxml-->
-<cu-custom bgColor="bg-yellow" isBack="{{true}}" >
+<cu-custom bgColor="bg-yellow" isBack="{{true}}">
 	<view slot="content"></view>
-	<view slot="backText">笔试/面试</view>
+	<view slot="backText">{{examType==='written'?'笔试':'面试'}}</view>
 </cu-custom>
-<text>笔试答题界面（下方四个模块可共用该界面）</text>
+<wxs module="filter">
+	var isChecked = function(key, data) {
+		if (data) {
+			return data.indexOf(key) != -1 ? true : false;
+		} else {
+			return false;
+		}
+	}
+	module.exports = {
+		isChecked: isChecked
+	}
+</wxs>
+<block wx:if="{{examType==='written'}}">
+	<view class="bank-wrap">
+		<!-- <view class="title">
+			<text>
+			{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}
+			</text>
+		</view> -->
+		<view class="bank" wx:key="id">
+			<block wx:if="{{bank.bank[questionIndex].type === '单选'}}">
+				<view class="quetion-title">
+					<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}【单选】</text>
+				</view>
+				<view class="radio-question">
+					<radio-group data-type="{{bank.bank[questionIndex].type}}" id="{{bank.bank[questionIndex].id}}" bindchange="radioChange" class="radio-group">
+						<label wx:for="{{bank.bank[questionIndex].options}}" wx:key="key" wx:for-index="key" wx:for-item="value" class="my-choosebox">
+							<radio disabled="{{chooseValue[questionIndex]&&!ifSubmitOne}}" checked="{{key === chooseValue[questionIndex]}}" class="{{bank.bank[questionIndex].mistaked&&key === chooseValue[questionIndex]?'red':'yellow'}} radio" wx:if="{{value}}" value="{{key}}">
+							</radio>
+							<text>{{value}}</text>
+						</label>
+					</radio-group>
+					<view class="view-answer" bindtap="viewAnwser">
+						{{ifViewAnwser?'收起答案':'查看答案'}}
+					</view>
+					<view hidden="{{!ifViewAnwser}}" class="correct-analyse">
+						<view>正确答案：<text class="text-yellow">{{correct_answer}}</text></view> <br />
+						<view>解析：{{bank.bank[questionIndex].parsing}}</view>
+					</view>
+				</view>
+
+			</block>
+			<block wx:if="{{bank.bank[questionIndex].type === '多选'}}">
+				<view class="checkbox-question">
+					<view class="quetion-title">
+						<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}【多选】</text>
+					</view>
+					<checkbox-group data-type="{{bank.bank[questionIndex].type}}" id="{{bank.bank[questionIndex].id}}" bindchange="checkboxChange" class="checkbox-group">
+						<label class="my-choosebox" wx:for="{{bank.bank[questionIndex].options}}" wx:key="key" wx:for-index="key" wx:for-item="value">
+							<checkbox disabled="{{chooseValue[questionIndex]&&!ifSubmitOne}}" wx:if="{{value}}" class="{{bank.bank[questionIndex].mistaked?'red':'yellow'}}" value="{{key}}" checked="{{filter.isChecked(key,chooseValue[questionIndex])}}">
+							</checkbox>
+							<text>{{value}}</text>
+						</label>
+					</checkbox-group>
+					<view class="view-answer" bindtap="viewAnwser">
+						{{ifViewAnwser?'收起答案':'查看答案'}}
+					</view>
+					<view hidden="{{!ifViewAnwser}}" class="correct-analyse">
+						<view>正确答案：<text class="text-yellow">{{correct_answer}}</text></view> <br />
+						<view>解析：{{bank.bank[questionIndex].parsing}}</view>
+					</view>
+				</view>
+			</block>
+			<block wx:if="{{bank.bank[questionIndex].type === '不定项选'}}">
+				<view class="checkbox-question">
+					<view class="quetion-title">
+						<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}【不定项选】</text>
+					</view>
+					<checkbox-group bindchange="checkboxChange" data-type="{{bank.bank[questionIndex].type}}" id="{{bank.bank[questionIndex].id}}" class="checkbox-group">
+						<label class="my-choosebox" wx:for="{{bank.bank[questionIndex].options}}" wx:key="key" wx:for-index="key" wx:for-item="value">
+							<checkbox disabled="{{chooseValue[questionIndex]&&!ifSubmitOne}}" checked="{{filter.isChecked(key,chooseValue[questionIndex])}}" wx:if="{{value}}" class="{{bank.bank[questionIndex].mistaked?'red':'yellow'}}" value="{{key}}">
+							</checkbox>
+							<text>{{value}}</text>
+						</label>
+					</checkbox-group>
+					<view class="correct-analyse">
+						<view>正确答案：<text class="text-yellow">{{correct_answer}}</text></view> <br />
+						<view>解析：{{bank.bank[questionIndex].parsing}}</view>
+					</view>
+				</view>
+
+			</block>
+			<block wx:if="{{bank.bank[questionIndex].type === '判断'}}">
+				<view class="radio-question">
+					<view class="quetion-title">
+						<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}【单选】</text>
+					</view>
+					<radio-group data-type="{{bank.bank[questionIndex].type}}" id="{{bank.bank[questionIndex].id}}" bindchange="radioChange" class="radio-group">
+						<label wx:for="{{bank.bank[questionIndex].options}}" wx:key="key" wx:for-index="key" wx:for-item="value" class="my-choosebox">
+							<radio disabled="{{chooseValue[questionIndex]&&!ifSubmitOne}}" class="radio {{bank.bank[questionIndex].mistaked&&key === chooseValue[questionIndex]?'red':'yellow'}}" wx:if="{{value}}" value="{{key}}">
+							</radio>
+							<text>{{value}}</text>
+						</label>
+					</radio-group>
+					<view class="correct-analyse">
+						<view>正确答案：<text class="text-yellow">{{correct_answer}}</text></view> <br />
+						<view>解析：{{bank.bank[questionIndex].parsing}}</view>
+					</view>
+				</view>
+
+			</block>
+			<block wx:if="{{bank.bank[questionIndex].type === '填空'}}">
+				<view class="blank-question">
+					<view class="quetion-title">
+						<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}【填空】</text>
+					</view>
+					<view hidden="{{!chooseValue[questionIndex]&&!ifSubmitOne}}" bindtap="handleTap" data-type="{{bank.bank[questionIndex].type}}" id="{{bank.bank[questionIndex].id}}">
+						你的答案: <text class="{{bank.bank[questionIndex].mistaked?'wrong-blank':'correct-blank'}}" >{{chooseValue[questionIndex]}}</text>
+					</view>
+					<view hidden="{{chooseValue[questionIndex]&&!ifSubmitOne}}"  bindtap="handleTap" data-type="{{bank.bank[questionIndex].type}}" id="{{bank.bank[questionIndex].id}}" wx:for="{{bank.bank[questionIndex].correct_answer}}" wx:key="key" wx:for-index="key" wx:for-item="value">
+						<input data-index="{{key}}" bindinput="inputChange" placeholder="[填空{{key + 1}}]"></input>
+					</view>
+
+					<view class="correct-analyse">
+						<view>正确答案：<text class="text-yellow">{{correct_answer}}</text></view> <br />
+						<view>解析：{{bank.bank[questionIndex].parsing}}</view>
+					</view>
+				</view>
+			</block>
+			<block wx:if="{{bank.bank[questionIndex].type === '排序'}}">
+				<view class="sort-question">
+					<view class="quetion-title">
+						<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}【排序】</text>
+					</view>
+					<view wx:for="{{bank.bank[questionIndex].options}}" wx:key="key" wx:for-index="key" wx:for-item="value">
+						<block wx:if="{{value != ''}}">
+							<view style="height: 50rpx;">
+								<text>{{key}}. {{value}}</text>
+							</view>
+						</block>
+					</view>
+
+					<view style="margin-top: 30rpx" wx:if="{{chooseValue[questionIndex]&&!ifSubmitOne}}">
+						你的答案:<text data-type="{{bank.bank[questionIndex].type}}" class="{{bank.bank[questionIndex].mistaked?'wrong-blank':'correct-blank'}}">
+						{{chooseValue[questionIndex]}}
+						</text>
+					</view>
+					<view style="margin-top: 30rpx" wx:else>
+						<input data-type="{{item.type}}" data-index="{{0}}" id="{{item.id}}" bindinput="inputChange" placeholder="[填空1]"></input>
+					</view>
+				</view>
+			</block>
+		</view>
+		<view style="margin-top: 40rpx" class="line"></view>
+		<view class="comments">
+			<view class="comment" wx:for="{{bank.bank[questionIndex].comments}}" wx:key="user_id">
+				<block wx-if="{{ifViewAllComments||index === 0}}">
+					<view class="user">
+						<view class="user-info">
+							<image class="mine" src="../../../images/icon/mine1.png"></image>
+							<view class="user-name">{{item.user_name}}</view>
+						</view>
+						<view class="like-dot">
+							<image class="like" src="../../../images/icon/like.png"></image>
+							<view class="dot-num">{{item.spot_count}}</view>
+						</view>
+					</view>
+					<view class="content">{{item.content}}
+					</view>
+				</block>
+			</view>
+			<view class="view-all" bindtap="viewAllComments">
+				{{ifViewAllComments?'收起评论':'查看全部评论'}}</view>
+			<view class="publish">
+				<input placeholder="发表你对这道题的想法"></input>
+				<view class="publish-comment">提交</view>
+			</view>
+		</view>
+	</view>
+	<view class="next-size">
+
+		<view wx:if="{{ifSubmitOne}}" class="next-question chekckout-question" bindtap="handleOneCommit">确定</view>
+		<view wx:else class="next-question chekckout-question" bindtap="handleNext">
+			{{questionIndex < bank.bank.length - 1?'下一题':'查看总分'}}</view>
+		<view wx:if="{{questionIndex > 0}}" class="pre-question chekckout-question" bindtap="handlePre">上一题</view>
+		<view class="page-size">{{questionIndex + 1}}/{{bank.bank.length}}
+		</view>
+	</view>
+
+</block>
+<block wx:else>
+	<text>面试答题界面</text>
+
+</block>
