--- a/miniprogram/pages/questionBank/index/index.wxml
+++ b/miniprogram/pages/questionBank/index/index.wxml
@@ -2,6 +2,10 @@
 <cu-custom bgColor="bg-yellow">
 	<view slot="content">题库</view>
 </cu-custom>
+<view class="my-search">
+<text class="cuIcon-search"></text>
+  <input type="text" value="{{searchValue}}" placeholder="查找试卷"></input>
+</view>
 <view class="wrap">
   <view style="background: #ffc000">
   	<view class="written {{checkoutBank === 'written'?'active':''}}" bindtap="handleWritten">
@@ -15,14 +19,16 @@
   <view class="swiper-wrap" >
   <swiper indicator-dots="{{true}}" autoplay="{{true}}">
 		<swiper-item>
-			<image src="../../../images/icon/home1.png"></image>
+			<image src="cloud://virtual-bxkak.7669-virtual-bxkak-1301807690/banners/36801589026721_.pic_hd.jpg"></image>
 		</swiper-item>
 		<swiper-item>
-			<image src="../../../images/icon/home1.png"></image>
+			<image src="cloud://virtual-bxkak.7669-virtual-bxkak-1301807690/banners/35101589021877_.pic_hd.jpg"></image>
+		</swiper-item>
+    		<swiper-item>
+			<image src="cloud://virtual-bxkak.7669-virtual-bxkak-1301807690/banners/35091589021877_.pic_hd.jpg"></image>
 		</swiper-item>
 	</swiper>
   </view>
-	
 
 	<view class="title">
 		<view class="linel"></view>
@@ -30,9 +36,15 @@
 		<view class="liner"></view>
 	</view>
   <block wx:if="{{loginStatus}}">
+ 
     <view class="bank-wrap">
       <van-tabs active="{{ active }}" color="#EFB806" bind:change="onChange">
         <van-tab title="精选">
+        <view hidden="{{!isLoading}}" class="loading-img">
+           <image  src="cloud://virtual-bxkak.7669-virtual-bxkak-1301807690/loading/WechatIMG501.png"></image>
+        </view>
+   
+        
           <block wx:if="{{item.bankList.length > 0}}">
             <view wx:for="{{item.bankList}}" wx:key="id">
               <template is="bankItem" data="{{item}}" />
@@ -40,11 +52,14 @@
           </block>
           <block wx:else>
           <view class="no-bank">
-            很抱歉，该行业暂时没收录题库
+            <text>很抱歉，该行业暂时没收录题库</text>
           </view>
           </block>
         </van-tab>
         <van-tab title="收藏">
+          <view hidden="{{!isLoading}}" class="loading-img">
+            <image  src="cloud://virtual-bxkak.7669-virtual-bxkak-1301807690/loading/WechatIMG501.png"></image>
+          </view>
           <block wx:if="{{colBankList.length > 0}}">
             <view wx:for="{{colBankList}}" wx:key="id">
               <template is="bankItem" data="{{item}}" />
@@ -58,6 +73,9 @@
         </van-tab>
         <!-- <block wx:if="{{checkoutBank == 'interview'}}"> -->
         <van-tab  disabled="{{checkoutBank === 'interview'}}" title="错题集">
+          <view hidden="{{!isLoading}}" class="loading-img">
+            <image  src="cloud://virtual-bxkak.7669-virtual-bxkak-1301807690/loading/WechatIMG501.png"></image>
+          </view>
           <block  wx:if="{{errBankList.length > 0}}">
             <view wx:for="{{errBankList}}" wx:key="id">
               <template is="bankItem" data="{{item}}" />
