--- a/miniprogram/pages/questionBank/answerQuestions/answerQuestions.wxml
+++ b/miniprogram/pages/questionBank/answerQuestions/answerQuestions.wxml
@@ -1,7 +1,7 @@
 <!--miniprogram/pages/questionBank/answerQuestions/answerQuestions.wxml-->
 <cu-custom bgColor="bg-yellow" isBack="{{true}}">
 	<view slot="content"></view>
-	<view slot="backText">{{examType==='written'?'笔试':'面试'}}</view>
+	<view slot="backText">笔试</view>
 </cu-custom>
 <wxs module="filter">
 	var isChecked = function(key, data) {
@@ -15,35 +15,7 @@
 		isChecked: isChecked
 	}
 </wxs>
-		<view class="menu" bindtap="handleMenu" data-target="Modal">
-			<text class="cuIcon-apps lg text-yellow"></text>
-		</view>
-
-<block wx:if="{{examType==='written'}}">
-		<view class="cu-modal {{modalName=='Modal'?'show':''}}" bindtap="hideModal">
-			<view class="cu-dialog" catchtap>
-				<view class="cu-bar bg-white justify-end">
-					<view class="cu-btn bg-yellow" bindtap="checkType">
-						{{ifViewWrong?'完整试卷':'只看错题'}}
-					</view>
-					<view class="action" bindtap="hideModal">
-						<text class="cuIcon-close text-red" style="font-size: 48rpx;"></text>
-					</view>
-				</view>
-				<view class="question-index-wrap">
-					<block wx:if="{{ifViewWrong}}">
-						<block wx:for="{{bank.bank}}" wx:key="index">
-							<view wx:if="{{item.mistaked}}" class="question-index {{item.mistaked?'wrong':'correct'}}" bindtap="skipQuestion" id="{{item.id}}">{{item.id}}</view>
-						</block>
-					</block>
-					<block wx:else>
-						<block wx:for="{{bank.bank}}" wx:key="id">
-							<view class="question-index {{item.mistaked?'wrong':'correct'}}" bindtap="skipQuestion" id="{{item.id}}">{{item.id}}</view>
-						</block>
-					</block>
-				</view>
-			</view>
-		</view>
+	
 	<view class="bank-wrap">
 		<view class="bank" wx:key="id">
 			<block wx:if="{{bank.bank[questionIndex].type === '单选'}}">
@@ -58,7 +30,7 @@
 							<text>{{value}}</text>
 						</label>
 					</radio-group>
-					<view class="view-answer" bindtap="viewAnwser">
+					<view wx:if="{{questionModal !== 'fighter'}}"  class="view-answer" bindtap="viewAnwser">
 						{{ifViewAnwser?'收起答案':'查看答案'}}
 					</view>
 					<view hidden="{{!ifViewAnwser}}" class="correct-analyse">
@@ -80,7 +52,7 @@
 							<text>{{value}}</text>
 						</label>
 					</checkbox-group>
-					<view class="view-answer" bindtap="viewAnwser">
+					<view wx:if="{{questionModal !== 'fighter'}}"  class="view-answer" bindtap="viewAnwser">
 						{{ifViewAnwser?'收起答案':'查看答案'}}
 					</view>
 					<view hidden="{{!ifViewAnwser}}" class="correct-analyse">
@@ -101,7 +73,7 @@
 							<text>{{value}}</text>
 						</label>
 					</checkbox-group>
-					<view class="view-answer" bindtap="viewAnwser">
+					<view wx:if="{{questionModal !== 'fighter'}}"  class="view-answer" bindtap="viewAnwser">
 						{{ifViewAnwser?'收起答案':'查看答案'}}
 					</view>
 					<view hidden="{{!ifViewAnwser}}" class="correct-analyse">
@@ -114,16 +86,16 @@
 			<block wx:if="{{bank.bank[questionIndex].type === '判断'}}">
 				<view class="radio-question">
 					<view class="quetion-title">
-						<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}【单选】</text>
+						<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}【判断】</text>
 					</view>
 					<radio-group data-type="{{bank.bank[questionIndex].type}}" id="{{bank.bank[questionIndex].id}}" bindchange="radioChange" class="radio-group">
 						<label wx:for="{{bank.bank[questionIndex].options}}" wx:key="key" wx:for-index="key" wx:for-item="value" class="my-choosebox">
-							<radio disabled="{{chooseValue[questionIndex]&&!ifSubmitOne}}" class="radio {{bank.bank[questionIndex].mistaked&&key === chooseValue[questionIndex]?'red':'yellow'}}" wx:if="{{value}}" value="{{key}}">
+							<radio disabled="{{chooseValue[questionIndex]&&!ifSubmitOne}}" class="radio {{bank.bank[questionIndex].mistaked&&key === chooseValue[questionIndex]?'red':'yellow'}}" checked="{{key === chooseValue[questionIndex]}}" wx:if="{{value}}" value="{{key}}">
 							</radio>
 							<text>{{value}}</text>
 						</label>
 					</radio-group>
-					<view class="view-answer" bindtap="viewAnwser">
+					<view wx:if="{{questionModal !== 'fighter'}}"  class="view-answer" bindtap="viewAnwser">
 						{{ifViewAnwser?'收起答案':'查看答案'}}
 					</view>
 					<view hidden="{{!ifViewAnwser}}" class="correct-analyse">
@@ -145,7 +117,7 @@
 						你的答案: <text class="{{bank.bank[questionIndex].mistaked?'wrong-blank':'correct-blank'}}" >{{chooseValue[questionIndex]}}</text>
 					</view>
 			
-					<view class="view-answer" bindtap="viewAnwser">
+					<view wx:if="{{questionModal !== 'fighter'}}"  class="view-answer" bindtap="viewAnwser">
 						{{ifViewAnwser?'收起答案':'查看答案'}}
 					</view>
 					<view hidden="{{!ifViewAnwser}}" class="correct-analyse">
@@ -174,10 +146,10 @@
 						{{chooseValue[questionIndex]}}
 						</text>
 					</view>
-						<view class="view-answer" bindtap="viewAnwser">
+						<view wx:if="{{questionModal !== 'fighter'}}" class="view-answer" bindtap="viewAnwser">
 							{{ifViewAnwser?'收起答案':'查看答案'}}
 						</view>
-						<view hidden="{{!ifViewAnwser}}" class="correct-analyse">
+						<view hidden="{{!ifViewAnwser}}"  class="correct-analyse">
 							<view>正确答案：<text class="text-yellow">{{correct_answer}}</text></view> <br />
 							<view>解析：{{examBank.bank.bank[questionIndex].parsing}}</view>
 					</view>
@@ -186,38 +158,28 @@
 		</view>
 		<view style="margin-top: 40rpx" class="line"></view>
 	</view>
-
-		<view wx:if="{{ifSubmitOne}}" class="next-question chekckout-question" bindtap="handleOneCommit">确定</view>
+	<block wx:if="{{questionModal === 'fighter'}}">
+			<view wx:if="{{ifSubmitOne}}" class="next-question chekckout-question" bindtap="handleOneCommit">确定</view>
+		<view wx:else class="next-question chekckout-question" bindtap="handleNext">
+			{{questionIndex < bank.bank.length - 1?'下一题':'查看总分'}}
+		</view>
+		<!-- <view wx:if="{{questionIndex > 0}}" class="pre-question chekckout-question" bindtap="handlePre">上一题</view> -->
+	</block>
+	<block wx:else>
+			<view wx:if="{{ifSubmitOne}}" class="next-question chekckout-question" bindtap="handleOneCommit">确定</view>
 		<view wx:else class="next-question chekckout-question" bindtap="handleNext">
 			{{questionIndex < bank.bank.length - 1?'下一题':'查看总分'}}
 		</view>
 		<view wx:if="{{questionIndex > 0}}" class="pre-question chekckout-question" bindtap="handlePre">上一题</view>
+	</block>
+
 
 	<view class="next-size">
 		<view class="page-size">{{questionIndex + 1}}/{{bank.bank.length}}
 		</view>
 	</view>
-</block>
 
 
 
 
 
-<block wx:else>
-		<view class="cu-modal {{modalName=='Modal'?'show':''}}" bindtap="hideModal">
-			<view class="cu-dialog" catchtap>
-				<view class="cu-bar bg-white justify-end">
-					<view class="action" bindtap="hideModal">
-						<text class="cuIcon-close text-red"></text>
-					</view>
-				</view>
-				<view class="question-index-wrap">
-						<block wx:for="{{writtenBank.questions}}" wx:key="id">
-							<view  class="question-index correct" bindtap="skipQuestion" id="{{item.id}}">{{item.id}}</view>
-						</block>
-				</view>
-			</view>
-		</view>
-	<text>面试答题界面</text>
-
-</block>
