--- a/miniprogram/pages/questionBank/index/index.wxss
+++ b/miniprogram/pages/questionBank/index/index.wxss
@@ -42,13 +42,16 @@ page {
   font-size: 40rpx;
 }
 .swiper-wrap {
-  padding: 50rpx 0;
-  background: #ffc200;
+  padding-bottom: 50rpx;
 }
 swiper {
   width: 100%;
   height: 400rpx;
   background: gray;
+}
+image {
+  width: 100%;
+  height: 100%;
 }
 .title {
   position: relative;
@@ -56,7 +59,7 @@ swiper {
   height: 132rpx;
   line-height: 132rpx;
   text-align: center;
-  border: 2rpx solid rgba(187, 187, 187, 1);
+  /* border: 2rpx solid rgba(187, 187, 187, 1); */
   background: white;
   /* margin-top: 50rpx; */
 }
@@ -84,7 +87,7 @@ swiper {
   line-height: 40rpx;
   border-radius: 0rpx;
   text-align: center;
-  border: 1rpx solid rgba(187, 187, 187, 1);
+  /* border: 1rpx solid rgba(187, 187, 187, 1); */
   background-color: white;
 }
 .tab-active-class {
@@ -195,3 +198,39 @@ swiper {
   line-height: 300rpx;
 
 }
+.my-search {
+  position: absolute;
+  left: 80rpx;
+  top: 616rpx;
+  width: 590rpx;
+  height: 66rpx;
+  line-height: 66rpx;
+  border-radius: 100rpx;
+  background-color: rgba(255, 255, 255, 1);
+  box-shadow: 0rpx 4rpx 10rpx 0rpx rgba(155, 155, 155, 0.51);
+  border: 2rpx solid rgba(255, 255, 255, 0);
+  z-index: 9999;
+  font-size: 32rpx;
+  line-height: 66rpx;
+  font-family: Helvetica-regular;
+}
+.my-search input {
+  padding-left: 2em;
+  height: 66rpx;
+}
+.cuIcon-search {
+  position: absolute;
+  padding-left: 15rpx;
+  font-size: 48rpx;
+}
+.loading-img {
+  position: absolute;
+  height: 400rpx;
+  width: 100%;
+  background: white;
+  z-index: 100;
+}
+.loading-img image {
+  height: 100%;
+}
+
