--- a/miniprogram/pages/questionBank/viewQuestions/viewQuestions.wxml
+++ b/miniprogram/pages/questionBank/viewQuestions/viewQuestions.wxml
@@ -18,15 +18,16 @@
 	</wxs>
 	<view class="bank-wrap">
 		<view class="bank-title">
-			<text>{{examBank.bank.title}} </text>
+			<text>{{bank.title}} </text>
 			<text bindtap="handleCollection" class="cuIcon-favorfill text-yellow lg cuIcon-{{ifCollect?'favorfill': 'favor'}}"></text>
-		</view>
-		<view class="score-time">
-			<text class="time">时间：{{examBank.bank.limit_time}}分钟</text>
-		</view>
-		<view class="menu" bindtap="handleMenu" data-target="Modal">
+			<view class="menu" bindtap="handleMenu" data-target="Modal">
 			<text class="cuIcon-apps lg text-yellow"></text>
 		</view>
+		</view>
+		<!-- <view class="score-time">
+			<text class="time">时间：{{bank.limit_time}}分钟</text>
+		</view> -->
+		
 		<view class="cu-modal {{modalName=='Modal'?'show':''}}" bindtap="hideModal">
 			<view class="cu-dialog" catchtap>
 				<view class="cu-bar bg-white justify-end">
@@ -39,12 +40,12 @@
 				</view>
 				<view class="question-index-wrap">
 					<block wx:if="{{ifViewWrong}}">
-						<block wx:for="{{examBank.bank.bank}}" wx:key="index">
+						<block wx:for="{{bank.bank}}" wx:key="index">
 							<view wx:if="{{item.mistaked}}" class="question-index {{item.mistaked?'wrong':'correct'}}" bindtap="skipQuestion" id="{{item.id}}">{{item.id}}</view>
 						</block>
 					</block>
 					<block wx:else>
-						<block wx:for="{{examBank.bank.bank}}" wx:key="id">
+						<block wx:for="{{bank.bank}}" wx:key="id">
 							<view class="question-index {{item.mistaked?'wrong':'correct'}}" bindtap="skipQuestion" id="{{item.id}}">{{item.id}}</view>
 						</block>
 					</block>
@@ -55,102 +56,102 @@
 		<view class="line">
 		</view>
 		<view class="bank" wx:key="id">
-			<block wx:if="{{examBank.bank.bank[questionIndex].type === '单选'}}">
+			<block wx:if="{{bank.bank[questionIndex].type === '单选'}}">
 				<view class="radio-question">
 					<view class="quetion-title">
-						<text>{{examBank.bank.bank[questionIndex].id}}. {{examBank.bank.bank[questionIndex].title}}【单选】</text>
+						<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}【单选】</text>
 					</view>
-					<radio-group data-type="{{examBank.bank.bank[questionIndex].type}}" id="{{examBank.bank.bank[questionIndex].id}}" bindchange="radioChange" class="radio-group">
-						<label wx:for="{{examBank.bank.bank[questionIndex].options}}" wx:key="key" wx:for-index="key" wx:for-item="value" class="my-choosebox">
-							<radio disabled checked="{{key === examBank.chooseValue[questionIndex]}}" class="{{examBank.bank.bank[questionIndex].mistaked&&key === examBank.chooseValue[questionIndex]?'red':'yellow'}} radio" wx:if="{{value}}" value="{{key}}">
+					<radio-group data-type="{{bank.bank[questionIndex].type}}" id="{{bank.bank[questionIndex].id}}" bindchange="radioChange" class="radio-group">
+						<label wx:for="{{bank.bank[questionIndex].options}}" wx:key="key" wx:for-index="key" wx:for-item="value" class="my-choosebox">
+							<radio disabled checked="{{key === chooseValue[questionIndex]}}" class="{{bank.bank[questionIndex].mistaked&&key === chooseValue[questionIndex]?'red':'yellow'}} radio" wx:if="{{value}}" value="{{key}}">
 							</radio>
 							<text>{{value}}</text>
 						</label>
 					</radio-group>
 					<view class="correct-analyse">
 						<view>正确答案：<text class="text-yellow">{{correct_answer}}</text></view> <br />
-						<view>解析：{{examBank.bank.bank[questionIndex].parsing}}</view>
+						<view>解析：{{bank.bank[questionIndex].parsing}}</view>
 					</view>
 				</view>
 
 			</block>
-			<block wx:if="{{examBank.bank.bank[questionIndex].type === '多选'}}">
+			<block wx:if="{{bank.bank[questionIndex].type === '多选'}}">
 				<view class="checkbox-question">
 					<view class="quetion-title">
-						<text>{{examBank.bank.bank[questionIndex].id}}. {{examBank.bank.bank[questionIndex].title}}【多选】</text>
+						<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}【多选】</text>
 					</view>
-					<checkbox-group data-type="{{examBank.bank.bank[questionIndex].type}}" id="{{examBank.bank.bank[questionIndex].id}}" bindchange="checkboxChange" class="checkbox-group">
-						<label class="my-choosebox" wx:for="{{examBank.bank.bank[questionIndex].options}}" wx:key="key" wx:for-index="key" wx:for-item="value">
-							<checkbox disabled wx:if="{{value}}" class="{{examBank.bank.bank[questionIndex].mistaked?'red':'yellow'}}" value="{{key}}" checked="{{filter.isChecked(key,examBank.chooseValue[questionIndex])}}">
+					<checkbox-group data-type="{{bank.bank[questionIndex].type}}" id="{{bank.bank[questionIndex].id}}" bindchange="checkboxChange" class="checkbox-group">
+						<label class="my-choosebox" wx:for="{{bank.bank[questionIndex].options}}" wx:key="key" wx:for-index="key" wx:for-item="value">
+							<checkbox disabled wx:if="{{value}}" class="{{bank.bank[questionIndex].mistaked?'red':'yellow'}}" value="{{key}}" checked="{{filter.isChecked(key,chooseValue[questionIndex])}}">
 							</checkbox>
 							<text>{{value}}</text>
 						</label>
 					</checkbox-group>
 					<view class="correct-analyse">
 						<view>正确答案：<text class="text-yellow">{{correct_answer}}</text></view> <br />
-						<view>解析：{{examBank.bank.bank[questionIndex].parsing}}</view>
+						<view>解析：{{bank.bank[questionIndex].parsing}}</view>
 					</view>
 				</view>
 			</block>
-			<block wx:if="{{examBank.bank.bank[questionIndex].type === '不定项选'}}">
+			<block wx:if="{{bank.bank[questionIndex].type === '不定项选'}}">
 				<view class="checkbox-question">
 					<view class="quetion-title">
-						<text>{{examBank.bank.bank[questionIndex].id}}. {{examBank.bank.bank[questionIndex].title}}【不定项选】</text>
+						<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}【不定项选】</text>
 					</view>
-					<checkbox-group bindchange="checkboxChange" data-type="{{examBank.bank.bank[questionIndex].type}}" id="{{examBank.bank.bank[questionIndex].id}}" class="checkbox-group">
-						<label class="my-choosebox" wx:for="{{examBank.bank.bank[questionIndex].options}}" wx:key="key" wx:for-index="key" wx:for-item="value">
-							<checkbox disabled wx:if="{{value}}" class="{{examBank.bank.bank[questionIndex].mistaked?'red':'yellow'}}" value="{{key}}" checked="{{filter.isChecked(key,examBank.chooseValue[questionIndex])}}">
+					<checkbox-group bindchange="checkboxChange" data-type="{{bank.bank[questionIndex].type}}" id="{{bank.bank[questionIndex].id}}" class="checkbox-group">
+						<label class="my-choosebox" wx:for="{{bank.bank[questionIndex].options}}" wx:key="key" wx:for-index="key" wx:for-item="value">
+							<checkbox disabled wx:if="{{value}}" class="{{bank.bank[questionIndex].mistaked?'red':'yellow'}}" value="{{key}}" checked="{{filter.isChecked(key,chooseValue[questionIndex])}}">
 							</checkbox>
 							<text>{{value}}</text>
 						</label>
 					</checkbox-group>
 					<view class="correct-analyse">
 						<view>正确答案：<text class="text-yellow">{{correct_answer}}</text></view> <br />
-						<view>解析：{{examBank.bank.bank[questionIndex].parsing}}</view>
+						<view>解析：{{bank.bank[questionIndex].parsing}}</view>
 					</view>
 				</view>
 
 			</block>
-			<block wx:if="{{examBank.bank.bank[questionIndex].type === '判断'}}">
+			<block wx:if="{{bank.bank[questionIndex].type === '判断'}}">
 				<view class="radio-question">
 					<view class="quetion-title">
-						<text>{{examBank.bank.bank[questionIndex].id}}. {{examBank.bank.bank[questionIndex].title}}【单选】</text>
+						<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}【单选】</text>
 					</view>
-					<radio-group data-type="{{examBank.bank.bank[questionIndex].type}}" id="{{examBank.bank.bank[questionIndex].id}}" bindchange="radioChange" class="radio-group">
-						<label wx:for="{{examBank.bank.bank[questionIndex].options}}" wx:key="key" wx:for-index="key" wx:for-item="value" class="my-choosebox">
-							<radio disabled checked="{{key === examBank.chooseValue[questionIndex]}}" class="radio {{examBank.bank.bank[questionIndex].mistaked&&key === examBank.chooseValue[questionIndex]?'red':'yellow'}}" wx:if="{{value}}" value="{{key}}">
+					<radio-group data-type="{{bank.bank[questionIndex].type}}" id="{{bank.bank[questionIndex].id}}" bindchange="radioChange" class="radio-group">
+						<label wx:for="{{bank.bank[questionIndex].options}}" wx:key="key" wx:for-index="key" wx:for-item="value" class="my-choosebox">
+							<radio disabled checked="{{key === chooseValue[questionIndex]}}" class="radio {{bank.bank[questionIndex].mistaked&&key === chooseValue[questionIndex]?'red':'yellow'}}" wx:if="{{value}}" value="{{key}}">
 							</radio>
 							<text>{{value}}</text>
 						</label>
 					</radio-group>
 					<view class="correct-analyse">
 						<view>正确答案：<text class="text-yellow">{{correct_answer}}</text></view> <br />
-						<view>解析：{{examBank.bank.bank[questionIndex].parsing}}</view>
+						<view>解析：{{bank.bank[questionIndex].parsing}}</view>
 					</view>
 				</view>
 
 			</block>
-			<block wx:if="{{examBank.bank.bank[questionIndex].type === '填空'}}">
+			<block wx:if="{{bank.bank[questionIndex].type === '填空'}}">
 				<view class="blank-question">
 					<view class="quetion-title">
-						<text>{{examBank.bank.bank[questionIndex].id}}. {{examBank.bank.bank[questionIndex].title}}【填空】</text>
+						<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}【填空】</text>
 					</view>
 
-					<view bindtap="handleTap" data-type="{{examBank.bank.bank[questionIndex].type}}" id="{{examBank.bank.bank[questionIndex].id}}">
-						你的答案: <text class="{{examBank.bank.bank[questionIndex].mistaked?'wrong-blank':'correct-blank'}}" >{{examBank.chooseValue[questionIndex]}}</text>
+					<view bindtap="handleTap" data-type="{{bank.bank[questionIndex].type}}" id="{{bank.bank[questionIndex].id}}">
+						你的答案: <text class="{{bank.bank[questionIndex].mistaked?'wrong-blank':'correct-blank'}}" >{{chooseValue[questionIndex]}}</text>
 					</view>
 					<view class="correct-analyse">
 						<view>正确答案：<text class="text-yellow">{{correct_answer}}</text></view> <br />
-						<view>解析：{{examBank.bank.bank[questionIndex].parsing}}</view>
+						<view>解析：{{bank.bank[questionIndex].parsing}}</view>
 					</view>
 				</view>
 			</block>
-			<block wx:if="{{examBank.bank.bank[questionIndex].type === '排序'}}">
+			<block wx:if="{{bank.bank[questionIndex].type === '排序'}}">
 				<view class="sort-question">
 					<view class="quetion-title">
-						<text>{{examBank.bank.bank[questionIndex].id}}. {{examBank.bank.bank[questionIndex].title}}【排序】</text>
+						<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}【排序】</text>
 					</view>
-					<view wx:for="{{examBank.bank.bank[questionIndex].options}}" wx:key="key" wx:for-index="key" wx:for-item="value">
+					<view wx:for="{{bank.bank[questionIndex].options}}" wx:key="key" wx:for-index="key" wx:for-item="value">
 						<block wx:if="{{value != ''}}">
 							<view style="height: 50rpx;">
 								<text>{{key}}. {{value}}</text>
@@ -158,20 +159,20 @@
 						</block>
 					</view>
 					<view style="margin-top: 30rpx">
-						你的答案:<text data-type="{{examBank.bank.bank[questionIndex].type}}" class="{{examBank.bank.bank[questionIndex].mistaked?'wrong-blank':'correct-blank'}}">
-						{{examBank.chooseValue[questionIndex]}}
+						你的答案:<text data-type="{{bank.bank[questionIndex].type}}" class="{{bank.bank[questionIndex].mistaked?'wrong-blank':'correct-blank'}}">
+						{{chooseValue[questionIndex]}}
 						</text>
 					</view>
 					<view class="correct-analyse">
 						<view>正确答案：<text class="text-yellow">{{correct_answer}}</text></view> <br />
-						<view>解析：{{examBank.bank.bank[questionIndex].parsing}}</view>
+						<view>解析：{{bank.bank[questionIndex].parsing}}</view>
 					</view>
 				</view>
 			</block>
 		</view>
 		<view style="margin-top: 40rpx" class="line"></view>
 		<view class="comments">
-			<view class="comment" wx:for="{{examBank.bank.bank[questionIndex].comments}}" wx:key="user_id">
+			<view class="comment" wx:for="{{bank.bank[questionIndex].comments}}" wx:key="user_id">
 				<block wx-if="{{ifViewAllComments||index === 0}}">
 					<view class="user">
 						<view class="user-info">
@@ -198,16 +199,16 @@
 	<view class="next-size">
 		<block wx:if="{{ifViewWrong}}">
 			<view class="next-question chekckout-question" bindtap="handleNext">
-				{{wrongIndex < examBank.wrongList.length - 1?'下一题':'查看总分'}}</view>
+				{{wrongIndex < wrongList.length - 1?'下一题':'查看总分'}}</view>
 			<view wx:if="{{wrongIndex > 0}}" class="pre-question chekckout-question" bindtap="handlePre">上一题</view>
-			<view class="page-size">{{wrongIndex + 1}}/{{examBank.wrongList.length}}
+			<view class="page-size">{{wrongIndex + 1}}/{{wrongList.length}}
 			</view>
 		</block>
 		<block wx:else>
 			<view class="next-question chekckout-question" bindtap="handleNext">
-				{{questionIndex < examBank.bank.bank.length - 1?'下一题':'查看总分'}}</view>
+				{{questionIndex < bank.bank.length - 1?'下一题':'查看总分'}}</view>
 			<view wx:if="{{questionIndex > 0}}" class="pre-question chekckout-question" bindtap="handlePre">上一题</view>
-			<view class="page-size">{{questionIndex + 1}}/{{examBank.bank.bank.length}}
+			<view class="page-size">{{questionIndex + 1}}/{{bank.bank.length}}
 			</view>
 		</block>
 	</view>
